crates/data-dict/tests/snapshots/validate__schema_s07_other_type_missing_examples.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"schema/s07-other-type-missing-examples.yaml\")"
---
Error: [S07]
    ╭─[ schema/s07-other-type-missing-examples.yaml:11:15 ]
    │
 11 │       - name: label
    │               ──┬──  
    │                 ╰──── column `t.label` has type `string` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ schema/s07-other-type-missing-examples.yaml:14:15 ]
    │
 14 │       - name: code
    │               ──┬─  
    │                 ╰─── column `t.code` has type `number(id)` but is missing the expected `examples` property
────╯
